@@ -110,10 +110,9 @@ public class ChangeStreamMonitor implements Runnable, ShutdownListener {
             throw new RuntimeException("Already running!");
         }
 
-        changeStreamThread = new Thread(this);
-        changeStreamThread.setDaemon(true);
-        changeStreamThread.setName("changeStream");
-        changeStreamThread.start();
+        changeStreamThread = Thread.ofVirtual()
+            .name("changeStream")
+            .start(this);
         running = true;
     }
 
